--- a/src/ci.yml
+++ b/src/ci.yml
@@ -47,3 +47,9 @@ publish:
  # Passo 3: Autenticar no NPM
       - name: Authenticate to npm
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.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 }}" > ~/.npmrc
+
+# Passo 4: Publicar no npm, se a versão tiver sido incrementada
+      - name: Publish to npm
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.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 }}
