--- a/src/ci.yml
+++ b/src/ci.yml
@@ -44,12 +44,12 @@ publish:
         with:
           node-version: '16'
 
- # Passo 3: Autenticar no NPM
+  # Passo 3: Autenticar no NPM
       - name: Authenticate to npm
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.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 }}" > ~/.npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
 # Passo 4: Publicar no npm, se a versão tiver sido incrementada
       - name: Publish to npm
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.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 }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
