--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -1,8 +1,8 @@
 # Chave única do projeto no SonarCloud
-sonar.projectKey=<your-project-key>
+sonar.projectKey=<estudantesgitb_uf-cicd-calcjs-juan>
 
 # Organização do projeto no SonarCloud
-sonar.organization=<your-organization-key>
+sonar.organization=<estudantesgitb>
 
 # Linguagem principal do projeto
 sonar.language=js
@@ -11,7 +11,7 @@ sonar.language=js
 sonar.sources=./src
 
 # Diretório dos testes
-sonar.tests=./tests
+sonar.tests=./src
 
 # Informa o nome da branch padrão (geralmente "main")
 sonar.branch.name=main
