--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -14,4 +14,4 @@ sonar.sources=./src
 sonar.tests=./src
 
 # Informa o nome da branch padrão (geralmente "main")
-sonar.branch.name=main
+sonar.branch.name=master
