--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -1,8 +1,8 @@
 # Chave única do projeto no SonarCloud
-sonar.projectKey=<estudantesgitb_uf-cicd-calcjs-juan>
+sonar.projectKey=estudantesgitb_uf-cicd-calcjs-juan
 
 # Organização do projeto no SonarCloud
-sonar.organization=<estudantesgitb>
+sonar.organization=estudantesgitb
 
 # Linguagem principal do projeto
 sonar.language=js
