subindo alteracao devel

--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -1,7 +1,5 @@
-# Chave única do projeto no SonarCloud
 sonar.projectKey=estudantesgitb_uf-cicd-calcjs-juan
 
-# Organização do projeto no SonarCloud
 sonar.organization=estudantesgitb
 
 # Linguagem principal do projeto
@@ -14,4 +12,4 @@ sonar.sources=./src
 sonar.tests=./src
 
 # Informa o nome da branch padrão (geralmente "main")
-sonar.branch.name=master
+sonar.branch.name=develop
